# roam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.mac  README.md  build  build.zig  noise.md
data/: VictoriaBold.xcf  blocks.xcf  blocks8-v1.xcf  boot.lua  boot.script  font.xcf  postproc.frag  postproc.vert
src/: CMakeLists.txt  blocks.c  blocks.h  common.h  easing.h  game.h  gen.c  gen.h  geometry.c  geometry.h  images.h  main.c  map.c  map.h  math3d.c  math3d.h  noise.c  noise.h  objfile.c  objfile.h  player.c  player.h  rnd.h  roam_linux.c  roam_windows.c  script.c  script.h  shaders.h  sky.c  sky.h  stb.c  sys.c  threads.c  threads.h  tweak.c  tweak.h  u8.c  u8.h  ui.c  ui.h  (+2 more)
