cmake_minimum_required(VERSION 3.0.0)
project(roam)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -Wall -Wno-unused-function -fno-strict-aliasing -fomit-frame-pointer -std=gnu11")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2 -Wall -Wno-unused-function -m64 -mfpmath=sse -mtune=generic -fno-strict-aliasing -fomit-frame-pointer -std=gnu11 -DNDEBUG")
include(FindPkgConfig)
find_package(Threads)
pkg_search_module(GLEW REQUIRED gl)
pkg_search_module(GLEW REQUIRED glew)
pkg_search_module(SDL2 REQUIRED sdl2)
include_directories("src" "stb" ${GL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
file(GLOB_RECURSE sources "src/*.c")
add_executable(roam ${sources})
target_link_libraries(roam ${GL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL2_LIBRARIES} m ${CMAKE_THREAD_LIBS_INIT})
