cmake_minimum_required (VERSION 3.15)
project (roam)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(SDL2 REQUIRED)
include_directories ("stb")
include_directories (${OPENGL_INCLUDE_DIR})
include_directories (${GLEW_INCLUDE_DIRS})
include_directories (${SDL2_INCLUDE_DIRS})
add_subdirectory (src)

